--- a/css/standard.css
+++ b/css/standard.css
@@ -1,15 +1,14 @@
 html{ 
       background-color: 
-      #000066; 
+      #99CCFF; 
       font-family: Arial; 
-      font-size: 18px;
-      position: relative;
+      font-size: 13px; 
+      position: relative; 
       }
 
       body{ 
       margin: 0; 
-      padding: 0;
-
+      padding: 0; 
       }
 
       a{ 
@@ -23,11 +22,11 @@ html{
 
       #login{ 
       color: #000; 
-      background-color: #9ff; 
+      background-color: #fff; 
       margin: 100px auto 0; 
       padding: 20px 20px 20px; 
       position: relative; 
-      width: 850px; 
+      width: 600px; 
       -webkit-border-radius: 8px; 
       -moz-border-radius: 8px; 
       border-radius: 8px; 
@@ -35,28 +34,21 @@ html{
 
 	h1{ 
       font-family: "Helvetica Neue", Arial, Helvetica, sans-serif; 
-      font-size: 50px; 
+      font-size: 36px; 
 	  text-align: center;
-      line-height: 70px; 
+      line-height: 50px; 
       margin: 0; 
       padding: 0; 
       }
 	  
       h2{ 
       font-family: "Helvetica Neue", Arial, Helvetica, sans-serif; 
-      font-size: 32px; 
-	text-align: center;
+      font-size: 24px; 
+	  text-align: center;
       line-height: 30px; 
-      padding: 0;
-	margin: 20px;
-      color: #444; 
+      margin: 0; 
+      padding: 0; 
       }
-
-	h3{
-	font-size: 30px;
-	position: relative;
-	left: 100px;
-	}
 
       ul{ 
       margin: 8px 20px; 
@@ -67,8 +59,8 @@ html{
       margin-top: 8px; 
       }
       
-      input[type="text"],input[type="email"],input[type="password"], textarea {
-        background-color: #FFFFFF;
+      input[type="text"],input[type="email"], textarea {
+        background-color: #F6F6F6;
         border: 1px solid #999;
         color: #444;
         font-family: Arial, Helvetica, sans-serif;
@@ -81,9 +73,10 @@ html{
       }
 	  
 	  select{
-	  font-size: 23px;
+	  font-size: 18px;
 	  font-family: Arial, Helvetica, sans-serif;
 	  color: #444;
+	  position: relative;
 	  }
       
       .button {
@@ -97,7 +90,7 @@ html{
         height: 25px;
         overflow: visible;
         padding: 0 12px;
-	margin: 10px 200;
+        margin: 5px auto 0;
         text-decoration: none;
         vertical-align: top;
         white-space: nowrap;
@@ -120,18 +113,16 @@ html{
       }
       
       .button.large {
-        font-size: 24px;
-        height: 40px;
+        font-size: 16px;
+        height: 32px;
         padding: 0 16px;
-	position: center;
-	margin: 10px 200;
+		position: center;
       }
       
       .button.go {
         background-color: #66AA44;
         color: #FFF;
       }
-
       
       .button.go:hover {
         background-color: #70B74E;
@@ -139,21 +130,17 @@ html{
       }
        
       .field{ 
-      margin: 8px 150;
-	padding: 12px;
+      margin: 8px 0; 
       }
 
       .field label{ 
       display: block; 
       font-weight: bold; 
-      font-size: 28px;
-	margin: 12 -100px;
-	text-align: left;
-	color: #621;
+      font-size: 14px; 
       }
 	  
       .actions{ 
-      text-align: right;
+      text-align: right; 
       }
 
       .bottom{ 
@@ -165,11 +152,11 @@ html{
 
       .top{ 
       border-bottom: 1px solid #eee; 
-      padding-bottom: 12px;
+      padding-bottom: 12px; 
       }
 
       .actions{ 
-      overflow: hidden;
+      overflow: hidden; 
       }
 
       .actions .secondary{ 
@@ -181,24 +168,13 @@ html{
 
       p{ 
       margin: 0; 
-      padding: 0;
-	font-size: 18;
+      padding: 0; 
       }
 
       .login-create{ 
       font-size: 16px; 
       font-weight: normal; 
       }
-
-	.nextButton {
-	text-align: center;
-	font-size: 50px;
-	 }
-
-	.returnButton {
-	text-align: center;
-	font-size: 50px;
-	}
     
       @media screen and (max-width: 767px){
         html, body { background-color: #fff; }
